[package]
name = "dioxus-katex"
version = "0.2.1"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-katex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
dioxus = "0.2.4"
katex-wasmbind = {version = "0.9.3", path = "../wasmbind-katex"}

[dev-dependencies]


[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
