[package]
name = "dioxus-katex"
version = "0.3.2"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Dioxus!"
repository = "https://github.com/oovm/katex-wasm"
documentation = "https://docs.rs/dioxus-katex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
dioxus = "0.4.0"
katex-wasmbind = { version = "0.10.0" }

[dev-dependencies]


[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
