[package]
name = "yew-katex-preview"
publish = false
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-katex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
dioxus = "0.1.8"
dioxus-katex = {version = "0.1", path = "../dioxus-katex"}
