[package]
name = "katex-preview"
publish = false
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-katex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
log = "0.4.17"
wasm-logger = "0.2.0"
dioxus = "0.3.2"
dioxus-web = "0.3.2"
dioxus-katex = { version = "*", path = "../dioxus-katex" }

[dev-dependencies]
macrowind = "0.1.1"
