[package]
name = "katex-wasmbind"
version = "0.10.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "KaTeX Render for wasm bind"
repository = "https://github.com/oovm/katex-wasm"
license = "MPL-2.0"
readme = "Readme.md"
edition = "2021"

[dependencies]
serde = "1.0.145"
serde_derive = "1.0.145"

[dependencies.wasm-bindgen]
version = "0.2.83"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
