[package]
name = "yew-katex"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-katex"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.19.3"
katex-wasmbind = "0.9"
anyhow = "1.0.57"

[dev-dependencies]


[features]
default = ["auto-cdn"]
auto-cdn = []
