[package]
name = "yew-katex"
version = "0.19.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/oovm/yew-katex"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.19.3"
gloo-utils = "0.1.5"
katex-wasmbind = "0.10.0"

[dev-dependencies]


[features]
default = ["auto-cdn"]
auto-cdn = []
